--- a/Notes.html
+++ b/Notes.html
@@ -34,7 +34,7 @@
 
         <div class="grid">
             <nav aria-label="Table of contents">
-                <a href="#intro">Introduction</a>
+                <a href="#intro">Introducastion</a>
                 <a href="#structure">Document structure</a>
                 <a href="#elements">Common elements</a>
                 <a href="#attributes">Attributes</a>
@@ -47,6 +47,7 @@
             <main>
                 <section id="intro">
                     <h2>Introduction</h2>
+                    <link rel="gemini" href="gemini.google.com">
                     <p>HTML (HyperText Markup Language) defines the structure of web pages using elements represented by tags.</p>
                 </section>
 
