--- a/test1.html
+++ b/test1.html
@@ -14,7 +14,7 @@
 
     <main>
         <p>Starter content</p>
-        <a href="/Users/thales/Documents/vscode/Website-Development/test1page2.html">Click to Page2</a>
+        <a href="https://github.com/Vesper-1/Website-Development/blob/414be725b3110f14c5c0d29cc8942f39d44039c8/test1page2.html">Click to Page2</a>
     </main>
 
     <footer>
